@@ -3,6 +3,7 @@ documents those changes that are of interest to users and administrators.
 
 * Changes in Slurm 16.05.5
 ==========================
+ -- Fix accounting for jobs requeued after the previous job was finished.
 
 * Changes in Slurm 16.05.4
 ==========================
